--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.6.13",
+    "@nestjs/mapped-types": "^0.4.0",
     "@nestjs/platform-express": "^7.6.13",
     "@prisma/client": "^2.19.0",
     "class-transformer": "^0.4.0",
